🔧 Require signed assembly

--- a/BlazorMauiApp1/BlazorMauiApp1.csproj
+++ b/BlazorMauiApp1/BlazorMauiApp1.csproj
@@ -30,7 +30,7 @@
         <TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
         <AndroidSigningKeyStore>MauiBlazor.keystore</AndroidSigningKeyStore>
-        <SignAssembly>False</SignAssembly>
+        <SignAssembly>True</SignAssembly>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <RepositoryUrl>https://github.com/gaelj/maui-bLazor</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
