--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,11 @@ jobs:
       if: matrix.os == 'windows-latest'
       run: |
         curl -LO https://aka.ms/vs/17/release/vs_buildtools.exe
-        start /wait vs_buildtools.exe --quiet --norestart --wait --installPath "C:\BuildTools" --add Microsoft.VisualStudio.Workload.XamarinBuildTools --add Microsoft.VisualStudio.Workload.NetCoreBuildTools --add Microsoft.NetCore.Component.SDK
+        vs_BuildTools.exe --layout .\vs_BuildTools
+        cd vs_BuildTools
+        start /wait vs_setup.exe      --quiet --norestart --wait --noUpdateInstaller --noWeb --add Microsoft.VisualStudio.Workload.XamarinBuildTools --add Microsoft.VisualStudio.Workload.NetCoreBuildTools --add Microsoft.NetCore.Component.SDK;includeRecommended;includeOptional
+        cd ..
+      # start /wait vs_buildtools.exe --quiet --norestart --wait --installPath "C:\BuildTools" --add Microsoft.VisualStudio.Workload.XamarinBuildTools --add Microsoft.VisualStudio.Workload.NetCoreBuildTools --add Microsoft.NetCore.Component.SDK
 
     - name: Install maui-android workload
       if: matrix.os == 'macos-latest'
