--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -59,7 +59,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: Publish Output
-        path: ./publish
+        path: ./BlazorMauiApp1/publish
 
     - name: Create Release
       uses: actions/create-release@v1
@@ -77,7 +77,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./publish/android/com.companyname.blazormauiapp1-Signed.apk
+        asset_path: ./BlazorMauiApp1/publish/android/com.companyname.blazormauiapp1-Signed.apk
         asset_name: com.companyname.blazormauiapp1-Signed.apk
         asset_content_type: application/vnd.android.package-archive
 
@@ -87,6 +87,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./publish/ios/BlazorMauiApp1.ipa
+        asset_path: ./BlazorMauiApp1/publish/ios/BlazorMauiApp1.ipa
         asset_name: BlazorMauiApp1.ipa
         asset_content_type: application/octet-stream
